...
    
    var body: some View {
        ZStack {
            themeManager.background.edgesIgnoringSafeArea(.all)
            
            VStack(spacing: 0) {
                TextField("Country...", text: $vm.searchedText)
                    .padding(.horizontal, 16)
                    .frame(height: 40)
                    .background(
                        RoundedRectangle(cornerRadius: 16)
                            .stroke(Color.gray, lineWidth: 1)
                    )
...
                }
            }
        }
        .task {
            await vm.fetchCountries()
        }
        .navigationTitle("Countries")
    }
}

#Preview {
    let mock = MockGraphQLNetworkServiceImpl()
    mock.setData([Country(code: "IN", name: "India", capital: "Delhi")])
...
