...
        NavigationStack(path: $router.path) {
            TabView(selection: $selectedTab) {
                HomeBuilder.build(container: container)
                    .secure()
                    .tabItem {
                        Image(systemName: "house")
                        Text("Home")
                    }
                    .tag(0)

                ProfileView()
                    .tabItem {
                        Image(systemName: "person")
                        Text("Profile")
                    }
                    .tag(1)
            }
            .tint(container.theme.accent)
            .navigationDestination(for: AppRoute.self) { route in
                route.destination(container: container)
...
